wrap added, components' styles fixed

--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,10 +1,11 @@
-.footerWrapper {
-  position: sticky;
+.wrapper {
+  position: fixed;
   bottom: 0;
   margin-top: auto;
-  min-width: 100%;
+  width: 100%;
+  left: 0;
+  right: 0;
   background-color: transparent;
-  color: white;
   text-align: center;
 }
 
