--- a/src/app/components/Garment/Garment.module.scss
+++ b/src/app/components/Garment/Garment.module.scss
@@ -2,4 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 5rem 2rem;
+  height: 100%;
 }
