--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -1,6 +1,11 @@
-.header {
+.wrapper {
   text-align: center;
   background-color: transparent;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: auto;
 }
 
